Finished the automated conversion and launch

--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,15 @@ under the License.
             <plugin>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>slingfeature-maven-plugin</artifactId>
-                <version>1.0.2</version>
+                <version>1.0.3-SNAPSHOT</version>
                 <extensions>true</extensions>
+                <configuration>
+                    <features>target/fm</features>
+                </configuration>
                 <executions>
                     <execution>
                         <id>aggregate-base-feature</id>
-                        <phase>generate-resources</phase>
+<!--                        <phase>generate-resources</phase>-->
                         <goals>
                             <goal>aggregate-features</goal>
                         </goals>
@@ -48,20 +51,42 @@ under the License.
                             <aggregates>
                                 <aggregate>
                                     <classifier>example-runtime</classifier>
-                                    <filesInclude>*.json</filesInclude>
-                                    <markAsComplete>true</markAsComplete>
-                                    <frameworkPropertiesOverrides>
+                                    <filesInclude>**/*.json</filesInclude>
+<!--                                    <markAsComplete>true</markAsComplete>-->
+<!--                                    <frameworkPropertiesOverrides>-->
                                         <!-- Framework property overrides go here -->
-                                        <org.osgi.framework.bootdelegation>javax.*</org.osgi.framework.bootdelegation>
-                                    </frameworkPropertiesOverrides>
+<!--                                        <org.osgi.framework.bootdelegation>javax.*</org.osgi.framework.bootdelegation>-->
+<!--                                    </frameworkPropertiesOverrides>-->
                                 </aggregate>
                             </aggregates>
                         </configuration>
                     </execution>
                     <execution>
+                        <id>attach-base-feature</id>
+<!--                        <phase>generate-resources</phase>-->
+                        <goals>
+                            <goal>attach-features</goal>
+                        </goals>
+<!--                        <configuration>-->
+<!--                            <aggregates>-->
+<!--                                <aggregate>-->
+<!--                                    <classifier>example-runtime</classifier>-->
+<!--                                    <filesInclude>**/*.json</filesInclude>-->
+<!--                                    <markAsComplete>true</markAsComplete>-->
+<!--                                    <frameworkPropertiesOverrides>-->
+                                        <!-- Framework property overrides go here -->
+<!--                                        <org.osgi.framework.bootdelegation>javax.*</org.osgi.framework.bootdelegation>-->
+<!--                                    </frameworkPropertiesOverrides>-->
+<!--                                </aggregate>-->
+<!--                            </aggregates>-->
+<!--                        </configuration>-->
+                    </execution>
+                    <execution>
                         <id>verify-analyze</id>
-                        <phase>process-resources</phase>
-                        <goals><goal>analyse-features</goal></goals>
+<!--                        <phase>process-resources</phase>-->
+                        <goals>
+                            <goal>analyse-features</goal>
+                        </goals>
                         <configuration>
                             <framework>
                                 <groupId>org.apache.felix</groupId>
