--- a/pom.xml
+++ b/pom.xml
@@ -30,20 +30,98 @@ under the License.
     <name>Feature model of Sling 11</name>
     <packaging>slingosgifeature</packaging>
 
+    <properties>
+        <slingfeature-maven-plugin.version>1.1.0</slingfeature-maven-plugin.version>
+        <sling-feature-converter-maven-plugin.version>1.0.0-SNAPSHOT</sling-feature-converter-maven-plugin.version>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <outputDirectory>${project.build.directory}</outputDirectory>
+                    <resources>
+                        <resource>
+                            <directory>src/main/resources</directory>
+                        </resource>
+                    </resources>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>copy-frm-resource</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>sling-feature-converter-maven-plugin</artifactId>
+                <version>${sling-feature-converter-maven-plugin.version}</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>convert-pm</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>convert-pm</goal>
+                        </goals>
+                        <configuration>
+                            <inputFolder>${sling.starter.folder}/src/main/provisioning</inputFolder>
+                            <outputFolder>target/fm</outputFolder>
+                            <groupId>${{project.groupId}}</groupId>
+                            <artifactId>${{project.artifactId}}</artifactId>
+                            <version>${{project.version}}</version>
+                            <frameworkProperties>
+                                launchpad:felix.systempackages.substitution=true,
+                                launchpad:felix.systempackages.calculate.uses=true
+                            </frameworkProperties>
+                            <excludeBundles>
+                                org.apache.sling.launchpad.installer,
+                                org.apache.sling.jcr.repoinit.impl.RepositoryInitializer
+                            </excludeBundles>
+                            <runModes>
+                                oak_tar,
+                                :standalone
+                            </runModes>
+                        </configuration>
+                    </execution>
+<!--                    <execution>-->
+<!--                        <id>convert-cp</id>-->
+<!--                        <phase>process-classes</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>convert-cp</goal>-->
+<!--                        </goals>-->
+<!--                        <configuration>-->
+<!--                            &lt;!&ndash; NOTE: ${{ / }} is a way to encode placeholders that should not be interpolated in Maven in this call-->
+<!--                                       and ${{{ / }}} is used to make it a CP Conversion Placeholder }&ndash;&gt;-->
+<!--                            <artifactIdOverride>${{project.groupId}}:${{project.artifactId}}:slingosgifeature:${{{filename}}}:${{project.version}}</artifactIdOverride>-->
+<!--                            <installConvertedCP>true</installConvertedCP>-->
+<!--                            <convertedCPOutput>${project.build.directory}/fm.out</convertedCPOutput>-->
+<!--                            <fmOutput>${project.build.directory}/fm</fmOutput>-->
+<!--                            <fmPrefix>peregrine-</fmPrefix>-->
+<!--                        </configuration>-->
+<!--                    </execution>-->
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.sling</groupId>
                 <artifactId>slingfeature-maven-plugin</artifactId>
-                <version>1.0.3-SNAPSHOT</version>
+                <version>${slingfeature-maven-plugin.version}</version>
                 <extensions>true</extensions>
                 <configuration>
                     <features>target/fm</features>
+                    <generatedFeatures>${basedir}/target/fm</generatedFeatures>
                 </configuration>
                 <executions>
                     <execution>
                         <id>aggregate-base-feature</id>
-<!--                        <phase>generate-resources</phase>-->
+                        <phase>generate-test-sources</phase>
                         <goals>
                             <goal>aggregate-features</goal>
                         </goals>
@@ -52,62 +130,23 @@ under the License.
                                 <aggregate>
                                     <classifier>example-runtime</classifier>
                                     <filesInclude>**/*.json</filesInclude>
-<!--                                    <markAsComplete>true</markAsComplete>-->
-<!--                                    <frameworkPropertiesOverrides>-->
-                                        <!-- Framework property overrides go here -->
-<!--                                        <org.osgi.framework.bootdelegation>javax.*</org.osgi.framework.bootdelegation>-->
-<!--                                    </frameworkPropertiesOverrides>-->
                                 </aggregate>
                             </aggregates>
                         </configuration>
                     </execution>
                     <execution>
                         <id>attach-base-feature</id>
-<!--                        <phase>generate-resources</phase>-->
+                        <phase>process-test-sources</phase>
                         <goals>
                             <goal>attach-features</goal>
                         </goals>
-<!--                        <configuration>-->
-<!--                            <aggregates>-->
-<!--                                <aggregate>-->
-<!--                                    <classifier>example-runtime</classifier>-->
-<!--                                    <filesInclude>**/*.json</filesInclude>-->
-<!--                                    <markAsComplete>true</markAsComplete>-->
-<!--                                    <frameworkPropertiesOverrides>-->
-                                        <!-- Framework property overrides go here -->
-<!--                                        <org.osgi.framework.bootdelegation>javax.*</org.osgi.framework.bootdelegation>-->
-<!--                                    </frameworkPropertiesOverrides>-->
-<!--                                </aggregate>-->
-<!--                            </aggregates>-->
-<!--                        </configuration>-->
-                    </execution>
-                    <execution>
-                        <id>verify-analyze</id>
-<!--                        <phase>process-resources</phase>-->
-                        <goals>
-                            <goal>analyse-features</goal>
-                        </goals>
-                        <configuration>
-                            <framework>
-                                <groupId>org.apache.felix</groupId>
-                                <artifactId>org.apache.felix.framework</artifactId>
-                                <version>6.0.1</version>
-                            </framework>
-                            <scans>
-                                <scan>
-                                    <includeClassifier>example-runtime</includeClassifier>
-                                    <includeTasks>
-                                        <includeTask>bundle-packages</includeTask>
-                                    </includeTasks>
-                                </scan>
-                            </scans>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
+                <version>0.13</version>
                 <configuration>
                     <excludes>
                         <exclude>readme.md</exclude>
@@ -117,4 +156,45 @@ under the License.
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>launch</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.sling</groupId>
+                        <artifactId>slingfeature-maven-plugin</artifactId>
+                        <version>1.0.7-SNAPSHOT</version>
+                        <extensions>true</extensions>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.sling</groupId>
+                                <artifactId>org.apache.sling.feature.launcher</artifactId>
+                                <version>1.0.7-SNAPSHOT</version>
+                            </dependency>
+                            <dependency>
+                                <groupId>org.apache.sling</groupId>
+                                <artifactId>org.apache.sling.feature.extension.content</artifactId>
+                                <version>1.0.5-SNAPSHOT</version>
+                            </dependency>
+                        </dependencies>
+                        <executions>
+                            <execution>
+                                <id>launch-it</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>launch-features</goal>
+                                </goals>
+                                <configuration>
+                                    <selection>
+                                        <includeClassifier>example-runtime</includeClassifier>
+                                    </selection>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
